--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1",
+    "openai": "^3.3.0"
   }
 }
