--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
-    "openai": "^3.3.0"
-
+    "openai": "^3.3.0",
+    "serverless-http": "^3.2.0"
   }
 }
